--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <h1>{{title}}</h1>
 <hr>
 
@@ -6,3 +7,7 @@
 <app-heroes-hero></app-heroes-hero>
 
 <app-heroes-list></app-heroes-list>
+
+-->
+
+<app-dbz-main-page></app-dbz-main-page>
